fixed side-nave left border not showing

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -649,7 +649,7 @@ top: -4px;
     border-radius:0;
     margin-top: -10px;
     margin-bottom: 0px;
-
+    border-left: 28px solid #DAE5EA;
     .dot {
       display:none;
       height: 16px;
@@ -1320,7 +1320,7 @@ text-transform:none;
 .ul-fix {
   transform: scale(0.8);
     position: relative;
-    left: -23px;
+    left: -45px;
     top: 38px;
 }
 .intro-fix {
